--- a/src/views/editarproducto.ejs
+++ b/src/views/editarproducto.ejs
@@ -37,7 +37,7 @@
                         <% } %>
 
                         <label for="imgProducto" class="label-correo">Imagen del producto</label>
-                        <input type="file" name="imgProducto" id="imgProducto" class="img-create" required>
+                        <input type="file" name="imgProducto" id="imgProducto" class="img-create">
                         <p class="text-image"></p>
                         <% if(locals.errors && errors.imgProducto) { %>
                             <div class="text-danger">
@@ -128,7 +128,7 @@
 
         <%- include('./partials/footer-2')%>
         <script src="/js/main.js" type="module"></script>
-        <script src="/js/validationFrontCreate.js" type="module"></script>
+        <script src="/js/validationFrontEditProduct.js" type="module"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
     </html>
