--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -60,6 +60,7 @@
 
     <%- include('./partials/footer-1')%>
 
+    <script src="/js/formNews.js" type="module"></script>
     <script src="/js/main.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
