--- a/src/views/sobre-nosotros.ejs
+++ b/src/views/sobre-nosotros.ejs
@@ -24,15 +24,25 @@
         <section>
             <article>
                 <p class="texto-sn">
-                    The California Department of Fair Employment and Housing (DFEH) intends to file a lawsuit against Tesla alleging systematic racial discrimination and harassment. This follows a three-year investigation during which the DFEH—whose mission is supposedly to protect workers—has never once raised any concern about current workplace practices at Tesla. Rather, the lawsuit appears focused on alleged misconduct by production associates at the Fremont factory that took place between 2015 and 2019.
+                    Nuestra empresa, CarMakers S.A. invita a continuar la distinguida tradición de la estrella, por la cual posee un excelente y sostenido crecimiento basado en la confianza de sus clientes y calidad de servicios. Hoy en día se constituye como una concesionaria integral y competitiva en el mercado automotriz.
 
-Tesla strongly opposes all forms of discrimination and harassment and has a dedicated Employee Relations team that responds to and investigates all complaints. We also have a Diversity, Equity, and Inclusion team whose work is shown in this public report. Tesla has always disciplined and terminated employees who engage in misconduct, including those who use racial slurs or harass others in different ways. We recently rolled out an additional training program that reinforces Tesla’s requirement that all employees must treat each other with respect and reminds employees about the numerous ways they can report concerns, including anonymously. Above all, Tesla continues to seek to provide a workplace that is safe, respectful, fair, and inclusive­—all of which are vital to achieving our mission.
-
-Tesla is also the last remaining automobile manufacturer in California. The Fremont factory has a majority-minority workforce and provides the best paying jobs in the automotive industry to over 30,000 Californians. No company has done more for sustainability or the creation of clean energy jobs than Tesla. Yet, at a time when manufacturing jobs are leaving California, the DFEH has decided to sue Tesla instead of constructively working with us. This is both unfair and counterproductive, especially because the allegations focus on events from years ago.
-
-Over the past five years, the DFEH has been asked on almost 50 occasions by individuals who believe they were discriminated against or harassed to investigate Tesla. On every single occasion, when the DFEH closed an investigation, it did not find misconduct against Tesla. It therefore strains credibility for the agency to now allege, after a three-year investigation, that systematic racial discrimination and harassment somehow existed at Tesla. A narrative spun by the DFEH and a handful of plaintiff firms to generate publicity is not factual proof.
-
-Once the DFEH files its lawsuit, Tesla will be asking the court to pause the case and take other steps to ensure that facts and evidence will be heard. To date, despite repeated requests, the DFEH has declined to provide Tesla with the specific allegations or the factual bases for its lawsuit. Attacking a company like Tesla that has done so much good for California should not be the overriding aim of a state agency with prosecutorial authority. The interests of workers and fundamental fairness must come first.
+                    Por lo tanto, nuestro objetivo es la dedicación a satisfacer cada una de las necesidades y exigencias del cliente, nos focalizamos en un proceso de mejora continua y permanente en cuanto a infraestructura, servicio, tecnología, capacitación de nuestros profesionales y calidad de atención.
+                    
+                    Misión
+                    
+                    CarMakers S.A. está comprometida a desarrollar y construir la mayor cartera de clientes sumamente satisfechos, brindando una incomparable experiencia de compra o servicio de post venta, por su alto nivel de excelencia.
+                    
+                    Visión
+                    
+                    Nuestro objetivo es ser el concesionario líder en volumen, respeto y reconocimiento por parte de clientes, accionistas y funcionarios de la red de concesionarios Mercedes-Benz.
+                    
+                    Cultura
+                    
+                    Nuestra filosofía de trabajo se basa, primero, en la atención personalizada y exclusiva al cliente, conociendo y superando sus necesidades y expectativas y logrando una gran satisfacción en su experiencia por la concesionaria.
+                    
+                    Además, nos dedicamos a la constante profesionalización de nuestras áreas, generando equipos de trabajo proactivos, eficientes, productivos y exitosos, buscando un crecimiento personal, profesional y organizacional.
+                    
+                    Como resultado, esto se traduce y refleja en el día a día de nuestro trabajo, en conjunto y cooperativo, con personal dedicado, responsable y satisfecho por hacer felices a nuestros clientes.
                 </p>
             </article>
         </section>
