cambios css editar producto

--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -797,6 +797,10 @@ main section article div h3{
 
 /*PINTURA Y RUEDAS*/
 
+.scroll{
+    padding: 0 0 50px 0;
+}
+
 .auto-pintura, .auto-ruedas{
     width:80%;
     margin:80px auto 50px auto;
@@ -812,19 +816,23 @@ main section article div h3{
     margin-bottom:30px;
 }
 
+.article-ruedas{
+    margin: 0 0 50px 0;
+}
+
 .flex-circle{
     display: flex;
     justify-content: space-around;
     margin: 0 auto;
-    font-size: 2.3em;
+    font-size: 2.6em;
     max-width: 250px;
-
 }
+
 
 .flex-circle-dos{
     display: flex;
     justify-content: space-around;
-    font-size: 2.3em;
+    font-size: 2.6em;
     max-width: 100px;
     margin: 0 auto;
 }
@@ -851,23 +859,24 @@ main section article div h3{
     margin-left:5px;
 }
 
+
+.flex-circle-dos i:first-child{
+    color: #9b9b9b;
+}
+
 /*BOTÓN*/
 
 .add a button{
     border:none;
     border-radius: 30px;
     padding:15px;
-    margin: 40px 0;
+    margin: 20px 0;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    background-color: #ed7237;
+    background-color: #000000;
     color: white;
     width:80%;
 
-}
-
-.add{
-    margin-bottom: 50px;
 }
 
 /*CÍRCULOS*/
@@ -1827,6 +1836,7 @@ main section article div h3{
 .scroll{
     height: 100vh;
     overflow-y: scroll;
+    padding: 0 0 50px 0;
 }
 
 /* INVENTARIO */
