--- a/src/views/detalleproducto.ejs
+++ b/src/views/detalleproducto.ejs
@@ -91,7 +91,7 @@
 
                     <div class="precio-auto">
                         <p class="precio">Precio</p>
-                        <p class="numero">$<%= modelos.precio%> .000.000</p>
+                        <p class="numero">USD <%= modelos.precio%></p>
                     </div>
 
                 </div>
@@ -114,8 +114,8 @@
                 </div>
 
                 <div class="desc-color">
-                    <p class="color-pintura">Color nombre</p>
-                    <p class="precio-pintura">$1,000</p>
+                    <p class="color-pintura" id="pinturaColor"></p>
+                    <!-- <p class="precio-pintura">$1,000</p> -->
                 </div>
             </article>
 
@@ -130,13 +130,13 @@
                 <h4>Ruedas</h4>
 
                 <div class="flex-circle-dos">
-                    <i class="fas fa-solid fa-circle"></i>
-                    <i class="fas fa-solid fa-circle"></i>
+                    <i class="fas fa-solid fa-circle" id="ruedaDer"></i>
+                    <i class="fas fa-solid fa-circle" id="ruedaIzq"></i>
                 </div>
 
                 <div class="desc-ruedas">
-                    <p class="nombre-rueda">Ruedas nombre</p>
-                    <p class="precio-rueda">$2,000</p>
+                    <p class="nombre-rueda" id="nombreRueda"></p>
+                    <!-- <p class="precio-rueda">$2,000</p> -->
                 </div>
             </article>
 
@@ -146,12 +146,16 @@
                 </a>
             </article>
 
+
+            <% if(locals.isLogged) { %>
+                <% if(locals.userLogged.is_admin == 1) { %> 
             <article class="add">
                 <a href="/products/edit/<%= modelos.idModelo%>">
                     <button type="button">EDITAR PRODUCTO</i></button>
                 </a>
             </article>
-
+                <% } %>
+            <% } %>
 
 
         </section>
@@ -167,6 +171,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/jquery.ScrollMagic.min.js"></script>
 
     <script src="/js/main.js" type="module"></script>
+    <script src="/js/productDetail.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="/js/comprarCarrito.js" type="module"></script>
 </body>
