--- a/src/views/partials/secciones.ejs
+++ b/src/views/partials/secciones.ejs
@@ -3,7 +3,7 @@
     <section id="seccion-<%=(i+1)%>">
 
         <div class="texto-uno">
-            <h2 class="nombre-auto-uno">Modelo <%= i + 1 %> </h2>
+            <h2 class="nombre-auto-uno"> <%= productos[i].nombreModelo %> </h2>
             <h3 class="desc-auto-uno">Conocé <a href="/products">acá</a> ofertas exclusivas</h3>
         </div>
     
