terminada imagen del error producto

--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -27,12 +27,15 @@
             
             </article>
 
-        </section>
+            <div id="noproducto"></div>
 
-    <%- include('./partials/footer-2')%>
+            
+
+        </section>
 
 </main>
 
+    <%- include('./partials/footer-2')%>
     <script src="/js/main.js" type="module"></script>
     <script src="/js/searchBar.js" type="module"></script>
 
