--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -11,7 +11,6 @@
 }
 
 
-
 /*---NAV---*/
 
 /*MENU FLEX*/
@@ -1557,6 +1556,22 @@ main section article div h3{
     font-weight: 500;
 }
 
+.imagen-error{
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    width: 90%;
+    max-width: 400px;
+}
+
+.loSentimos{
+    margin: 20px auto;
+    text-align: center;
+    font-family: 'Roboto', 'sans-serif';
+    font-size: 1rem;
+    color: rgb(77, 77, 77);
+}
+
 /*---ANIMATIONS---*/
 
 @keyframes arrow {
@@ -1976,3 +1991,5 @@ nav a:hover{
     background-color: rgb(77, 77, 77);
     color:white;
 }
+
+
