--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <%- include('./partials/head')%>
-<body>
+<body class="body-login">
     <%- include('./partials/header-2')%>
     <%- include('./partials/menuResponsive')%>
     <div class="container-blur" id="filter"></div>
@@ -28,8 +28,6 @@
             </article>
 
             <div id="noproducto"></div>
-
-            
 
         </section>
 
