--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1559,13 +1559,14 @@ main section article div h3{
 .imagen-error{
     display: flex;
     justify-content: center;
-    margin: 0 auto;
+    margin: 50px auto 0 auto;
     width: 90%;
     max-width: 400px;
 }
 
 .loSentimos{
     margin: 20px auto;
+    width: 90%;
     text-align: center;
     font-family: 'Roboto', 'sans-serif';
     font-size: 1rem;
