--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1568,6 +1568,7 @@ main section article div h3{
     font-size: 30px;
     color:#313131;
     font-weight: 500;
+    text-align: left;
 }
 
 .mail-profile{
