--- a/src/views/editarproducto.ejs
+++ b/src/views/editarproducto.ejs
@@ -47,7 +47,7 @@
                         <% } %>
 
                         <label for="deliveryEstimado" class="label-correo">Delivery Estimado (semanas)</label>
-                        <input type="number" name="deliveryEstimado" class="delivery-create" id="deliveryEstimado" value="<%= productToEdit.deliveryEstimado %>" required>
+                        <input type="number" name="deliveryEstimado" class="delivery-create" id="deliveryEstimado" value="<%= productToEdit.deliveryEstimado %>" min="1" max="1000" required>
                         <p class="text-delivery"></p>
                         <% if(locals.errors && errors.deliveryEstimado) { %>
                             <div class="text-danger">
@@ -57,7 +57,7 @@
                         <% } %>
                         
                         <label for="precioProducto" class="label-correo">Precio (USD)</label>
-                        <input type="number" name="precioProducto" id="precioProducto" class="precio-create" value="<%= productToEdit.precio %>" required>
+                        <input type="number" name="precioProducto" id="precioProducto" class="precio-create" value="<%= productToEdit.precio %>" min="1" max="1000000" required>
                         <p class="text-precio"></p>
                         <% if(locals.errors && errors.precioProducto) { %>
                             <div class="text-danger">
@@ -67,7 +67,7 @@
                         <% } %>
                         
                         <label for="autonomia" class="label-correo">Autonomía (km)</label>
-                        <input type="number" name="autonomia" id="autonomia"  class="autonomia-create" value="<%= productToEdit.autonomia %>" required>
+                        <input type="number" name="autonomia" id="autonomia"  class="autonomia-create" value="<%= productToEdit.autonomia %>" min="1" max="1000" required>
                         <p class="text-autonomia"></p>
                         <% if(locals.errors && errors.autonomia) { %>
                             <div class="text-danger">
@@ -77,7 +77,7 @@
                         <% } %>
 
                         <label for="velocidadMaxima" class="label-correo">Velocidad Máxima (km/h)</label>
-                        <input type="number" name="velocidadMaxima" id="velocidadMaxima" class="velocidad-create" value="<%= productToEdit.velocidadMaxima %>" required>
+                        <input type="number" name="velocidadMaxima" id="velocidadMaxima" class="velocidad-create" value="<%= productToEdit.velocidadMaxima %>" min="1" max="1000" required>
                         <p class="text-velocidad"></p>
                         <% if(locals.errors && errors.velocidadMaxima) { %>
                             <div class="text-danger">
@@ -87,7 +87,7 @@
                         <% } %>
 
                         <label for="tiempoDeCeroCien" class="label-correo">Tiempo de cero a 100 km/h (seg)</label>
-                        <input type="number" name="tiempoDeCeroCien" id="tiempoDeCeroCien"  class="tiempo-create" value="<%= productToEdit.tiempoDeCeroCien %>" required>
+                        <input type="number" name="tiempoDeCeroCien" id="tiempoDeCeroCien"  class="tiempo-create" value="<%= productToEdit.tiempoDeCeroCien %>" min="1" max="1000" required>
                         <p class="text-tiempo"></p>
                         <% if(locals.errors && errors.tiempoDeCeroCien) { %>
                             <div class="text-danger">
