--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -61,6 +61,7 @@
         <%- include('./partials/footer-2')%>
         <script src="/js/main.js" type="module"></script>
         <script src="/js/validationFrontLogin.js" type="module"></script>
+        <script src="/js/profile.js" type="module"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
     </html>
