ultimos cambios de la branch

--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -62,8 +62,8 @@
                 <div class="div-boton">
                 <button type="submit" class="contacto">CONFIRMAR COMPRA</button>
                 </div>
-                <div class="div-login-button">
-                    <button class="register-button" type="submit" name="vaciar-carrito" id="vaciar-carrito">Vaciar Carrito</button>
+                <div class="div-boton2">
+                    <button class="carrito-button" type="submit" name="vaciar-carrito" id="vaciar-carrito">VACIAR CARRITO</button>
                 </div>
 
             </form>
