--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1078,32 +1078,52 @@ main section article div h3{
     width: 90%;
 }
 
+
 .contacto{
     border:none;
     font-size: 15px;
     background-color: #ed7237;
     color: white;
-    border-radius: 40px;
+    border-radius: 20px;
     font-family: 'Roboto', sans-serif; 
     font-weight: 500;
-    width:100%;
-    padding: 8px;
+    width:90%;
+    padding: 10px;
 }
+
+.carrito-button{
+    border:none;
+    font-size: 15px;
+    background-color: #e9e9e9;
+    color: rgb(0, 0, 0);
+    border-radius: 20px;
+    font-family: 'Roboto', sans-serif; 
+    font-weight: 500;
+    width:90%;
+    padding: 10px;
+}
+
 
 .div-boton{
     text-align: center;
     width: 100%;
-    margin: 20px auto 50px auto;
+    margin: 50px auto 0 auto;
+}
+
+.div-boton2{
+    text-align: center;
+    width: 100%;
+    margin: 20px auto 10px auto;
 }
 
 
 .flex-total{
     font-family: 'Raleway', sans-serif; 
-    margin: 15px 0 10px 0;
+    margin: 15px auto 10px auto;
     color: #888888;
     display: flex;
     justify-content: space-between;
-    width: 95%;
+    width: 90%;
     align-items: center;
 }
 
@@ -1822,7 +1842,7 @@ main section article div h3{
 
  /*CARRITO*/
 
- .main-carrito{
+/*  .main-carrito{
     display:grid;
     grid-template-columns: 60% 40%;
     column-gap: 20px;
@@ -1852,7 +1872,7 @@ main section article div h3{
 
 .mis-compras-dos{
     display: block;
-}
+} */
 
 
 /*DETALLE DE PRODUCTO*/
@@ -2015,15 +2035,8 @@ main section article div h3{
 }
 
 }
-
-
 }
 
- @media (min-width: 1500px){
-    .main-carrito{
-        max-width: 1200px;
-    }
- }
 
 /*---HOVER---*/
 
