--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -10,11 +10,12 @@
 
         <h2 class="mis-compras">Mis compras</h2>
 
+        <div class="ambas-secciones">
         <section class="main-section">
 
             <h2 class="mis-compras-dos">Mis compras</h2>
 
-                <ul id="productList"></ul>
+                <ul id="productList" class="lista-carrito"></ul>
                 <div id="noproducto">
                     <img src="/imgs/404error.png" class="imagen-error" alt="Todavía no has agregado productos en tu carrito."></img>
                     <p class="loSentimos">Todavía no has agregado productos en tu carrito.</p>
@@ -70,7 +71,7 @@
 
 
         </section>
-
+    </div>
 
     </main>
 
