--- a/dashboard/react-intro/src/App.css
+++ b/dashboard/react-intro/src/App.css
@@ -19,6 +19,18 @@
   font-weight: 500;
 }
 
+.item-title-prod{
+  margin: 100px auto 0 auto;
+  padding: 50px 0 0 0;
+  color:#11151a;
+  font-family: 'Raleway', 'sans-serif';
+  text-align: center;
+  font-size: 2em;
+  font-weight: 500;
+  border-top: solid rgb(156, 156, 156) 1px;
+  width: 90%;
+}
+
 .total-user-title{
   margin: 5px 0 0 0;
   padding:0;
@@ -84,3 +96,44 @@
   height:200px;
 }
 
+/*---SearchBar---*/
+
+.searchbar-form{ 
+  display: flex;
+}
+
+.button-input{
+  width: 80%;
+  max-width: 500px;
+}
+
+.search{
+  color: rgb(77, 77, 77);
+  width: 100%;
+  background: #ffffff;
+  padding: 15px;
+  border: none;
+  border-radius: 8px;
+  transition: all 300ms ease-in-out;
+  margin: 0;
+  box-shadow: 0 2px 20px rgb(0 0 0 / 20%);
+}
+
+.search:focus{
+  outline: none;
+  background-color: rgb(77, 77, 77);
+  color:white;
+}
+
+.boton-lupa{
+  margin-left: -30px;
+  background-color: transparent;
+  border: none;
+  color:#8b8b8b;
+}
+
+.section-search{
+  width:90%;
+  margin: 50px auto 0 auto;
+
+}
