--- a/src/views/partials/menuResponsive.ejs
+++ b/src/views/partials/menuResponsive.ejs
@@ -14,9 +14,8 @@
             <li><a href="/users">Todos los usuarios</a></li>
             <li><a href="/users/">Editar Usuario</a></li>
             <li><a href="/products/create">Crear Producto</a></li>
-            <li><a href="/products">Editar Producto</a></li>
+            <li><a href="/products" id="redirect-edit">Editar Producto</a></li>
             <li><a href="http://localhost:3000/">Dashboard</a></li>
         <% } %>
     <% } %>
 </ul>
-
