--- a/dashboard/react-intro/src/App.css
+++ b/dashboard/react-intro/src/App.css
@@ -11,7 +11,7 @@
 
 
 .item-title{
-  margin: 50px auto 0 auto;
+  margin: 10px auto 0 auto;
   padding: 50px 0 0 0;
   color:#11151a;
   font-family: 'Raleway', 'sans-serif';
@@ -94,8 +94,9 @@
 }
 
 .button-input{
-  width: 80%;
-  max-width: 500px;
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 .search{
@@ -186,5 +187,11 @@
     justify-content: center;
     max-width: 1000px;
     margin: 0 auto;
+  }
+
+  .button-input{
+    width: 80%;
+    max-width: 500px;
+    margin: 0;
   }
 }
