cambiadas las img del detail

--- a/src/views/detalleproducto.ejs
+++ b/src/views/detalleproducto.ejs
@@ -14,13 +14,13 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/imgs/autosinfondoblanco.png" class="d-block w-100" alt="..." id="banner-uno">
+                    <img src="/imgs/products/<%=modelos.imgProducto%>" class="d-block w-100" alt="..." id="banner-uno">
                   </div>
                   <div class="carousel-item">
-                    <img src="/imgs/autosinfondoblanco.png" class="d-block w-100" alt="...">
+                    <img src="/imgs/interior.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="/imgs/autosinfondoblanco.png" class="d-block w-100" alt="...">
+                    <img src="/imgs/interior2.jpg" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
