--- a/src/views/editarproducto.ejs
+++ b/src/views/editarproducto.ejs
@@ -115,7 +115,7 @@
                 </form>
 
                 <form action="/products/<%= productToEdit.idModelo %>/eliminar?_method=DELETE" method="POST" class="form-login">
-                     <button class="register-button" type="submit" name="eliminar">Eliminar Producto</button>
+                     <button class="delete-button" type="submit" name="eliminar">Eliminar Producto</button>
                 </form>
                 
         
