--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -42,7 +42,7 @@
                     </div>
 
                     <div class="div-login-button">
-                        <button class="login-button" type="submit" name="ingreso">INGRESAR</button>
+                        <button class="login-button" type="submit" name="ingreso">Ingresar</button>
                     </div>
 
                 </form>
@@ -51,7 +51,7 @@
             <h3 class="tiene-cuenta">¿No tiene una cuenta?</h3>
 
         <div class="boton-crear-cuenta">
-            <button class="account-button" type="submit" name="ingreso"><a href="/users/register">CREAR UNA CUENTA</a></button>
+            <button class="account-button" type="submit" name="ingreso"><a href="/users/register">Crear una Cuenta</a></button>
         </div>
 
         </div>
