--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -74,7 +74,7 @@
                     
 
                     <div class="div-login-button">
-                        <button class="register-button" type="submit" >CREAR UNA CUENTA</button>
+                        <button class="register-button" type="submit" >Crear una Cuenta</button>
                     </div>
 
                 </form>
@@ -84,7 +84,7 @@
 
 
         <div class="boton-crear-cuenta">
-            <button class="account-button" type="submit" name="ingreso"><a href="/users/login">INICIAR SESIÓN</a></button>
+            <button class="account-button" type="submit" name="ingreso"><a href="/users/login">Iniciar Sesión</a></button>
         </div>
 
         </div>
