--- a/src/views/editarUsuario.ejs
+++ b/src/views/editarUsuario.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <%- include('./partials/head')%>
-<body class="body-reg">
+<body class="body-login">
     
     <%- include('./partials/header-2')%>
     <%- include('./partials/menuResponsive')%>
@@ -69,7 +69,7 @@
                 </form>
 
                 <form action="/users/<%= usuarioToEdit.idUsuario %>/eliminar?_method=DELETE" method="POST" class="form-login">
-                    <button type="submit" class="register-button">ELIMINAR</button>
+                    <button type="submit" class="delete-button">Eliminar</button>
                 </form>
 
         </div>
